# gazebo_tutorial

./: .gitmodules  CMakeLists.txt  setup.sh  zmq1
apps/: CMakeLists.txt  camera_control.cpp
examples/: CMakeLists.txt  math.cpp
models/box/: model.config  model.sdf
models/joint_type/: model.config  model.sdf
models/my_robot/: model.config  model.sdf
models/ouster_lidar/: model.config  model.sdf
plugins/: CMakeLists.txt
plugins/StaticMap/: CMakeLists.txt  README.md  StaticMapPlugin.cc
plugins/StaticMap/tests/: js.html
plugins/gazebo_plugin_tutorial/: CMakeLists.txt  hello_world.cc  subscriber_demo.cc  subscriber_demo.cpp
plugins/joint_plugin/: JointPlugin.cpp
plugins/liftdrag_plugin/: liftdrag_plugin.cpp  liftdrag_plugin.h
urdf/: basic.urdf
worlds/: friction.world  static_map.world
